// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BalanceCard it renders correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c12:hover {
  opacity: 0.8;
}

.c8 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  color: #666666;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c3 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c4:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  word-wrap: break-word;
}

<div
  class="c0"
  display="flex"
  width="300px"
>
  <div
    class="c1"
    display="flex"
  >
    <h4
      class="c2"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Balance
    </h4>
    <div
      class="c1"
      display="flex"
    >
      <h4
        class="c3 c4"
        color="core.black"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Approx.
      </h4>
      <div
        class="c5"
        width="2"
      />
      <h4
        class="c6 c4"
        color="core.darkgray"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Exact
      </h4>
    </div>
  </div>
  <div
    class="c7"
    overflow="hidden"
  >
    <h2
      class="c8 c9"
      color="card.balance.color"
      font-family="RT-Alias-Grotesk"
      font-size="6"
      font-weight="700"
    >
      100
       FIL
    </h2>
    <h2
      class="c10"
      color="core.darkgray"
      font-family="RT-Alias-Grotesk"
      font-size="5"
      font-weight="700"
    >
      Loading USD
    </h2>
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12"
      font-size="3"
      height="6"
      type="button"
    >
      Send
    </button>
  </div>
</div>
`;

exports[`BalanceCard it renders precise when the user clicks "precise" 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c12:hover {
  opacity: 0.8;
}

.c8 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  color: #666666;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c3 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c4:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  word-wrap: break-word;
}

<div
  class="c0"
  display="flex"
  width="300px"
>
  <div
    class="c1"
    display="flex"
  >
    <h4
      class="c2"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Balance
    </h4>
    <div
      class="c1"
      display="flex"
    >
      <h4
        class="c3 c4"
        color="core.darkgray"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Approx.
      </h4>
      <div
        class="c5"
        width="2"
      />
      <h4
        class="c6 c4"
        color="core.black"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Exact
      </h4>
    </div>
  </div>
  <div
    class="c7"
    overflow="hidden"
  >
    <h2
      class="c8 c9"
      color="card.balance.color"
      font-family="RT-Alias-Grotesk"
      font-size="6"
      font-weight="700"
    >
      23488219.00001
       FIL
    </h2>
    <h2
      class="c10"
      color="core.darkgray"
      font-family="RT-Alias-Grotesk"
      font-size="5"
      font-weight="700"
    >
      Loading USD
    </h2>
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12"
      font-size="3"
      height="6"
      type="button"
    >
      Send
    </button>
  </div>
</div>
`;

exports[`BalanceCard it renders pretty billion dollar balances 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c12:hover {
  opacity: 0.8;
}

.c8 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  color: #666666;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c3 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c4:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  word-wrap: break-word;
}

<div
  class="c0"
  display="flex"
  width="300px"
>
  <div
    class="c1"
    display="flex"
  >
    <h4
      class="c2"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Balance
    </h4>
    <div
      class="c1"
      display="flex"
    >
      <h4
        class="c3 c4"
        color="core.black"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Approx.
      </h4>
      <div
        class="c5"
        width="2"
      />
      <h4
        class="c6 c4"
        color="core.darkgray"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Exact
      </h4>
    </div>
  </div>
  <div
    class="c7"
    overflow="hidden"
  >
    <h2
      class="c8 c9"
      color="card.balance.color"
      font-family="RT-Alias-Grotesk"
      font-size="6"
      font-weight="700"
    >
      10.0B
       FIL
    </h2>
    <h2
      class="c10"
      color="core.darkgray"
      font-family="RT-Alias-Grotesk"
      font-size="5"
      font-weight="700"
    >
      Loading USD
    </h2>
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12"
      font-size="3"
      height="6"
      type="button"
    >
      Send
    </button>
  </div>
</div>
`;

exports[`BalanceCard it renders pretty million dollar balances 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c12:hover {
  opacity: 0.8;
}

.c8 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  color: #666666;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c3 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c4:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  word-wrap: break-word;
}

<div
  class="c0"
  display="flex"
  width="300px"
>
  <div
    class="c1"
    display="flex"
  >
    <h4
      class="c2"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Balance
    </h4>
    <div
      class="c1"
      display="flex"
    >
      <h4
        class="c3 c4"
        color="core.black"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Approx.
      </h4>
      <div
        class="c5"
        width="2"
      />
      <h4
        class="c6 c4"
        color="core.darkgray"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Exact
      </h4>
    </div>
  </div>
  <div
    class="c7"
    overflow="hidden"
  >
    <h2
      class="c8 c9"
      color="card.balance.color"
      font-family="RT-Alias-Grotesk"
      font-size="6"
      font-weight="700"
    >
      10.0M
       FIL
    </h2>
    <h2
      class="c10"
      color="core.darkgray"
      font-family="RT-Alias-Grotesk"
      font-size="5"
      font-weight="700"
    >
      Loading USD
    </h2>
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12"
      font-size="3"
      height="6"
      type="button"
    >
      Send
    </button>
  </div>
</div>
`;

exports[`BalanceCard it renders pretty thousand dollar balances 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c12:hover {
  opacity: 0.8;
}

.c8 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  color: #666666;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c3 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c4:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  word-wrap: break-word;
}

<div
  class="c0"
  display="flex"
  width="300px"
>
  <div
    class="c1"
    display="flex"
  >
    <h4
      class="c2"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Balance
    </h4>
    <div
      class="c1"
      display="flex"
    >
      <h4
        class="c3 c4"
        color="core.black"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Approx.
      </h4>
      <div
        class="c5"
        width="2"
      />
      <h4
        class="c6 c4"
        color="core.darkgray"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Exact
      </h4>
    </div>
  </div>
  <div
    class="c7"
    overflow="hidden"
  >
    <h2
      class="c8 c9"
      color="card.balance.color"
      font-family="RT-Alias-Grotesk"
      font-size="6"
      font-weight="700"
    >
      10.0K
       FIL
    </h2>
    <h2
      class="c10"
      color="core.darkgray"
      font-family="RT-Alias-Grotesk"
      font-size="5"
      font-weight="700"
    >
      Loading USD
    </h2>
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12"
      font-size="3"
      height="6"
      type="button"
    >
      Send
    </button>
  </div>
</div>
`;

exports[`BalanceCard it renders pretty under 1 dollar balances 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c12:hover {
  opacity: 0.8;
}

.c8 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  color: #666666;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c3 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c4:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  word-wrap: break-word;
}

<div
  class="c0"
  display="flex"
  width="300px"
>
  <div
    class="c1"
    display="flex"
  >
    <h4
      class="c2"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Balance
    </h4>
    <div
      class="c1"
      display="flex"
    >
      <h4
        class="c3 c4"
        color="core.black"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Approx.
      </h4>
      <div
        class="c5"
        width="2"
      />
      <h4
        class="c6 c4"
        color="core.darkgray"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Exact
      </h4>
    </div>
  </div>
  <div
    class="c7"
    overflow="hidden"
  >
    <h2
      class="c8 c9"
      color="card.balance.color"
      font-family="RT-Alias-Grotesk"
      font-size="6"
      font-weight="700"
    >
      &lt; 0.001
       FIL
    </h2>
    <h2
      class="c10"
      color="core.darkgray"
      font-family="RT-Alias-Grotesk"
      font-size="5"
      font-weight="700"
    >
      Loading USD
    </h2>
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12"
      font-size="3"
      height="6"
      type="button"
    >
      Send
    </button>
  </div>
</div>
`;

exports[`BalanceCard it renders pretty under thousand dollar balances 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 8px;
  padding: 16px;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  min-height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  overflow: hidden;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-width: 1px;
  border-radius: 4px;
}

.c12:hover {
  opacity: 0.8;
}

.c8 {
  color: #262626;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c10 {
  color: #666666;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c3 {
  color: #000;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  color: #666666;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c4:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  word-wrap: break-word;
}

<div
  class="c0"
  display="flex"
  width="300px"
>
  <div
    class="c1"
    display="flex"
  >
    <h4
      class="c2"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Balance
    </h4>
    <div
      class="c1"
      display="flex"
    >
      <h4
        class="c3 c4"
        color="core.black"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Approx.
      </h4>
      <div
        class="c5"
        width="2"
      />
      <h4
        class="c6 c4"
        color="core.darkgray"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Exact
      </h4>
    </div>
  </div>
  <div
    class="c7"
    overflow="hidden"
  >
    <h2
      class="c8 c9"
      color="card.balance.color"
      font-family="RT-Alias-Grotesk"
      font-size="6"
      font-weight="700"
    >
      999.124
       FIL
    </h2>
    <h2
      class="c10"
      color="core.darkgray"
      font-family="RT-Alias-Grotesk"
      font-size="5"
      font-weight="700"
    >
      Loading USD
    </h2>
  </div>
  <div
    class="c11"
    display="flex"
  >
    <button
      class="c12"
      font-size="3"
      height="6"
      type="button"
    >
      Send
    </button>
  </div>
</div>
`;
